@@ -18,6 +18,7 @@ import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import javax.inject.Inject;
 import javax.inject.Singleton;
@@ -54,7 +55,7 @@ public class ElasticSearchProvider implements SearchProvider {
 
 	private static final Logger log = LoggerFactory.getLogger(ElasticSearchProvider.class);
 
-	private static final String INGEST_PIPELINE_PLUGIN_NAME = "ingest-attachment";
+	private static final String INGEST_ATTACHMENT_PROCESSOR_NAME = "attachment";
 
 	private SearchClient client;
 
@@ -64,7 +65,9 @@ public class ElasticSearchProvider implements SearchProvider {
 
 	private final static int MAX_RETRY_ON_ERROR = 5;
 
-	private Set<String> registerdPlugins = new HashSet<>();
+	private Set<String> registeredPlugins = new HashSet<>();
+
+	private Boolean hasAttachmentIngestProcessor = false;
 
 	private Lazy<Vertx> vertx;
 
@@ -120,7 +123,8 @@ public class ElasticSearchProvider implements SearchProvider {
 				if (log.isDebugEnabled()) {
 					log.debug("Waited for elasticsearch shard: " + (System.currentTimeMillis() - start) + "[ms]");
 				}
-				registerdPlugins = loadPluginInfo().blockingGet();
+				registeredPlugins = loadPluginInfo().blockingGet();
+				hasAttachmentIngestProcessor = this.client.hasIngestProcessor(INGEST_ATTACHMENT_PROCESSOR_NAME).blockingGet();
 			}
 		} catch (MalformedURLException e) {
 			throw error(INTERNAL_SERVER_ERROR, "Invalid search provider url");
@@ -289,28 +293,21 @@ public class ElasticSearchProvider implements SearchProvider {
 
 	public boolean hasPlugin(String name) {
 		Objects.requireNonNull(name, "A valid plugin name must be specified.");
-		return registerdPlugins.contains(name);
+		return registeredPlugins.contains(name);
 	}
 
 	@Override
 	public Single<Set<String>> loadPluginInfo() {
-		return client.nodesInfo().async().map(info -> {
-			Set<String> pluginSet = new HashSet<>();
-			JsonObject nodes = info.getJsonObject("nodes");
-			for (String nodeId : nodes.fieldNames()) {
-				JsonObject node = nodes.getJsonObject(nodeId);
-				JsonArray plugins = node.getJsonArray("plugins");
-				if (plugins == null) {
-					continue;
-				}
-				for (int i = 0; i < plugins.size(); i++) {
-					JsonObject plugin = plugins.getJsonObject(i);
-					String name = plugin.getString("name");
-					pluginSet.add(name);
-				}
-			}
-			return pluginSet;
-		});
+		return client.plugins().async()
+				.filter(response -> response.containsKey("arrayData"))
+				.map(wrappedAray -> wrappedAray.getJsonArray("arrayData"))
+				.map(plugins -> IntStream.range(0, plugins.size())
+						.mapToObj(plugins::getJsonObject)
+						.filter(plugin -> plugin.containsKey("component"))
+						.map(plugin -> plugin.getString("component"))
+						.collect(Collectors.toSet())
+				)
+				.toSingle();
 	}
 
 	@Override
@@ -611,7 +608,7 @@ public class ElasticSearchProvider implements SearchProvider {
 
 	@Override
 	public boolean hasIngestPipelinePlugin() {
-		return registerdPlugins.contains(INGEST_PIPELINE_PLUGIN_NAME);
+		return hasAttachmentIngestProcessor;
 	}
 
 	/**
