@@ -20,7 +20,7 @@
 		<spring.security.version>4.2.3.RELEASE</spring.security.version>
 		<ferma.version>2.4.0</ferma.version>
 		<ferma.orientdb.version>2.3.1</ferma.orientdb.version>
-		<elasticsearch.client.version>0.5.0</elasticsearch.client.version>
+		<elasticsearch.client.version>0.5.2-SNAPSHOT</elasticsearch.client.version>
 		<orientdb.version>2.2.34</orientdb.version>
 		<dagger.version>2.11</dagger.version>
 		<hazelcast.version>3.8.4</hazelcast.version>
